# intmax2-cli

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml
.sqlx/: query-450776f6afd83a061718d1b184cc509134f702a852cd71ff3d5a0bb212aa764b.json  query-9478aa81c1c4fd1d490404b80376209ee71373ffd24594396f07c9d9802a1d6b.json  query-a71bfcb65b0b2b1bb3bda3c4a3c2f4cee5ccbde97ba184c631d8be41ff5979f9.json
balance-prover/: Cargo.toml
balance-prover/src/: main.rs
block-builder/: .env.example  Cargo.toml
block-builder/src/: lib.rs  main.rs
block-builder/src/api/: api.rs  block_builder.rs  error.rs  mod.rs  state.rs
cli/: .env.example  Cargo.toml  README.md
cli/scripts/: transfers.sh
cli/src/: args.rs  cli.rs  lib.rs  main.rs
cli/src/cli/: client.rs  deposit.rs  error.rs  get.rs  mod.rs  send.rs  sync.rs  utils.rs
cli/src/external_api/indexer/: api.rs
client-sdk/: Cargo.toml
client-sdk/abi/: Liquidity.json  Rollup.json
client-sdk/src/client/: balance_logic.rs  client.rs  error.rs  history.rs  mod.rs  sync.rs
client-sdk/src/external_api/: balance_prover.rs  block_builder.rs  indexer.rs  mod.rs  store_vault_server.rs  validity_prover.rs  withdrawal_aggregator.rs  withdrawal_server.rs
core-sdk/: Cargo.toml
core-sdk/src/: lib.rs
core-sdk/src/client/: account.rs  balance_logic.rs  client.rs  error.rs
interfaces/: Cargo.toml
interfaces/src/api/: error.rs  mod.rs
interfaces/src/api/balance_prover/: interface.rs
interfaces/src/api/block_builder/: interface.rs  types.rs
interfaces/src/api/block_validity_prover/: interface.rs
interfaces/src/api/indexer/: types.rs
interfaces/src/api/store_vault_server/: interface.rs
interfaces/src/api/validity_prover/: interface.rs  types.rs
interfaces/src/api/withdrawal_aggregator/: interface.rs
interfaces/src/api/withdrawal_server/: interface.rs  types.rs
interfaces/src/data/: deposit_data.rs  transfer_data.rs  tx_data.rs  user_data.rs
mining/: .gitignore  Cargo.toml  README.md
mining/data/: poet_witness.json
mining/src/: lib.rs  main.rs  utils.rs
mining/src/common/: deposit.rs  history.rs  mod.rs
mining/src/poet/: blockchain.rs  client.rs  history.rs  mod.rs  nullifier.rs  prove.rs  validation.rs  witness.rs
postgress-test/: .env  Cargo.toml  docker-compose.yml
postgress-test/migrations/: 20241128162758_create_users_table.sql
postgress-test/src/: main.rs
scripts/: test.sh
send-tx/: Cargo.toml
server/: Cargo.toml
server-common/: Cargo.toml
server-common/src/: health_check.rs  logger.rs
server/src/: lib.rs  main.rs
server/src/api/: mod.rs
store-vault-server/: Cargo.toml  README.md
store-vault-server/src/: lib.rs  main.rs
store-vault-server/src/api/: api.rs  store_vault_server.rs
test-server/: Cargo.toml
tests/: .env  Cargo.toml
tests/tests/: deploy_contracts.rs
validity-prover/: .env.example  Cargo.toml
validity-prover/migrations/: 20241129021126_initial.down.sql  20241129021126_initial.up.sql
validity-prover/src/: lib.rs  main.rs
validity-prover/src/api/: api.rs  error.rs  (+4 more)
validity-prover/tests/: deploy.rs  post_blocks.rs
wasm/: Cargo.toml
wasm/js-test/: .env.example  package-lock.json  package.json
wasm/src/: client.rs  lib.rs
withdrawal-server/: .env.example  Cargo.toml
withdrawal-server/migrations/: 20241129143059_initial.sql
withdrawal-server/src/: main.rs
(+64 files in other folders)
