[workspace]
members = [
    "cli",
    "client-sdk",
    "interfaces",
    "wasm",
    "test-server",
]

[workspace.dependencies]
plonky2 = { git="https://github.com/InternetMaximalism/polygon-plonky2.git", branch="intmax2-dev"}
intmax2-zkp = {git ="https://github.com/InternetMaximalism/intmax2-zkp", branch = "cli"}