[package]
name = "intmax2-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
plonky2 = {workspace = true} 
intmax2-zkp = {workspace = true}
intmax2-client-sdk = {path="../client-sdk"}
clap = { version = "4.5.18", features = ["derive"] }
ethers = "2.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.93"
num-bigint = "0.4.6"
rand = "0.8.5"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
mockito = "1.6.1"
hex = "0.4.3"
