[package]
name = "interfaces"
version = "0.1.0"
edition = "2021"

[dependencies]
plonky2 = { git="https://github.com/InternetMaximalism/polygon-plonky2.git", branch="intmax2-dev"}
intmax2-zkp = {git ="https://github.com/InternetMaximalism/intmax2-zkp", branch = "cli"}
serde = {version="1.0.210", features = ["derive"]}
serde_json = "1.0.128"
anyhow = "1.0.93"
bincode = "1.3.3"
hashbrown = "0.14.5"
async-trait = "0.1.83"
thiserror = "2.0.3"
