[package]
name = "intmax2-interfaces"
version = "0.1.0"
edition = "2021"

[dependencies]
plonky2 = {workspace = true} 
intmax2-zkp = {workspace = true}
serde = {version="1.0.210", features = ["derive"]}
serde_json = "1.0.128"
anyhow = "1.0.93"
bincode = "1.3.3"
hashbrown = "0.14.5"
async-trait = "0.1.83"
thiserror = "2.0.3"
