[package]
name = "mining"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
envy.workspace = true
ethers.workspace = true
intmax2-client-sdk = { path = "../client-sdk" }
intmax2-interfaces = { path = "../interfaces" }
intmax2-zkp.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
